<resources>
    <string name="app_name">TimeSpace</string>
    <!--<string name="google_maps_key">AIzaSyCQF-sz1uTSnbDnl7w6ij70TvT8tXELRe0</string>-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timespace">TimeSpace</string>
    <string name="timetables_navigation_item">TimeTables</string>
    <string name="navigation_open">open</string>
    <string name="navigation_close">close</string>
    <string name="btn_login">Sign In</string>
    <string name="password">Password</string>
    <string name="signup_message">Don\'t have an account?</string>
    <string name="sign_up_text_btn">Sign Up</string>
    <string name="login_message">Already have an account?</string>
    <string name="sign_in_text_btn">Sign In</string>
    <string name="re_type_password">Re-type password</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="surname">Surname</string>
    <string name="or">or</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="in">in</string>
    <string name="ics_group_c">ICS group C</string>
    <string name="group">group</string>
    <string name="members">members:</string>
    <string name="_0">0</string>
    <string name="accepted">accepted:</string>
    <string name="expand">expand</string>
    <string name="meetings">Meetings</string>
    <string name="view_all">view all</string>
    <string name="entries">entries</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="daily_view">Daily</string>
    <string name="weekly_view">Weekly</string>
    <string name="monthly_view">Monthly</string>
    <string name="choose_a_profile_picture">Choose a profile picture</string>
    <string name="profile_pic">Profile pic</string>
    <string name="sign_up">SIGN UP</string>
    <string name="tel">Tel</string>
    <string name="sign_up_with">SIGN UP WITH</string>
    <string name="facebook">FACEBOOK</string>
    <string name="gmail">GMAIL</string>
    <string name="tweeter">TWEETER</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="finish">FINISH</string>
    <string name="add_a_profile_pic">ADD A PROFILE PIC</string>
    <string name="profile_pic_explanation">Your profile pic helps your peers, colegues and friends identify you quickly.</string>
    <string name="choose_from_our_selection">ChOOSE FROM OUR SELECTION</string>
    <string name="google">GOOGLE</string>
    <string name="google_sign_in_success_more_info">You have been signed in by Google successfully. We just need a few more details.</string>
    <string name="facebook_sign_in_success_more_info">You have been signed in by Facebook successfully. We just need a few more details.</string>
    <string name="facebook_app_id">2096113567340294</string>
    <string name="fb_login_protocol_scheme">fb2096113567340294</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="lets_get_a_few_details">LETS GET A FEW DETAILS</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with">SIGN IN WITH</string>
    <string name="search">Search</string>
    <string name="join_your_organizations_and_groups">SEARCH FOR YOUR ORGANIZATION AND JOIN YOUR GROUPS.</string>
    <string name="results">Results</string>
    <string name="joined">Joined</string>
    <string name="results_count">30 results</string>
    <string name="suggested">Suggested</string>
    <string name="paste_an_invitation_link">PASTE AN INVITATION LINK</string>
    <string name="item">item</string>
    <string name="member_since">member since</string>
    <string name="three_years_ago">3 years ago</string>
    <string name="groups">groups</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="Groups">Groups</string>
    <string name="request_sent">Request Sent</string>
    <string name="_results">results</string>
    <string name="organization">organization</string>
    <string name="view">view</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="request_rejected">request has been rejected</string>
    <string name="joined_successfully">joined successfully</string>
    <string name="join">JOIN</string>
    <string name="left_successfully">Left successfully</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="requested_successfully">Requested successfully</string>
    <string name="un_registered_successfully">Unregistered Successfully</string>
    <string name="tab">tab</string>
    <string name="contacts_permission_prompt">We need permission to check your contacts. Click the button below to allow us access to your contacts.</string>
    <string name="btn_contact_permission">CHECK PERMISSION</string>
    <string name="follow">FOLLOW</string>
    <string name="invite">INVITE</string>
    <string name="following">FOLLOWING</string>
    <string name="invited">INVITED</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="invite_all">Invite All</string>
    <string name="no_number">No number</string>
    <string name="_1">1</string>
    <string name="you_have">You have</string>
    <string name="_4">4</string>
    <string name="new_followers">new followers</string>
    <string name="new_follower">new follower</string>
    <string name="new_follower_notification_channel">1</string>
    <string name="new_follower_notification_id">1</string>
    <string name="settings">Settings</string>
    <string name="call">CALL</string>
    <string name="free">Free</string>
    <string name="upto">up to</string>
    <string name="private_user">private user</string>
    <string name="busy">Busy</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="created_on">Created on</string>
    <string name="name">Name</string>
    <string name="abbr">Abbr</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="note">Note</string>
    <string name="tags">Tags</string>
    <string name="add">Add</string>
    <string name="no_tags_yet">NO TAGS YET</string>
    <string name="click_the_button_to_add_your_own">Click the + button to add one</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="color">colour</string>
    <string name="repeats">Repetations</string>
    <string name="time">Time</string>
    <string name="no_time_set">NO TIME SET</string>
    <string name="click_the_button_to_add_time">Click the + button set a start and end for this class. You can add more if this class is repeated throught the week.</string>
    <string name="address">Address</string>
    <string name="room">Room</string>
    <string name="floor">Floor</string>
    <string name="building">Building</string>
    <string name="teacher">Teacher</string>
    <string name="summary">Summary</string>
    <string name="or_invite">OR INVITE</string>
    <string name="someone">someone</string>
    <string name="retry">Retry</string>
    <string name="span_day">Span days</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="date">Date</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="tag_name_hint">Name</string>
    <string name="tag_description_hint">Description</string>
    <string name="tag_color_hint">Colour</string>
    <string name="pick_a_color">Pick a colour</string>
    <string name="tags_navigation_item">Tags</string>
    <string name="settings_navigation_item">Settings</string>
    <string name="logout_navigation_item">Logout</string>
    <string name="add_a_review">Add a review</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="your_tags">Your tags</string>
    <string name="teacher_name">Teacher\'s name</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_the_button_to_add_your_own_or">Click the + button to add your one. Or head over to My Tags to configure some tags.</string>
    <string name="repeats_on">Repeats On</string>
    <string name="time_and_place">Time and Place</string>
    <string name="group_navigation_item">My Groups</string>
    <string name="user_profile_navigation_item">Your Profile</string>
    <string name="add_examination">Add an exam</string>
    <string name="add_meeting">Schedule a meeting</string>
    <string name="add_clazz">Add a class</string>
    <string name="_8_15_am">8:15 am</string>
    <string name="_9_15_pm">9:15 pm</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="at">at</string>
    <string name="tag">tag</string>
    <string name="_5">5</string>
    <string name="type">Type</string>
    <string name="app_invites_navigation_item">Invite or Find your Friend</string>
    <string name="add_tags_from_the_tags_menu">Add tags from the tags menu on the left</string>
    <string name="size">size</string>
    <string name="bytes">Byte(s)</string>
    <string name="no_attachments_yet">NO ATTACHMENTS YET</string>
    <string name="click_the_button_to_add_attachment">Click the + button below to add attachments to this meeting.</string>
    <string name="no_attendees_yet">NO ATTENDEES YET</string>
    <string name="use_search_to_add_attendee">Use the search bar at the top to search for people and add them to the meeting. You can also invite anyone who is not yet using TimeSpace.</string>
    <string name="we_need_permission_to_function">Sorry but we won\'t be able to provide full functionality without the following permissions:%1$s</string>
    <string name="no_permissions">We don\'t have permission</string>
</resources>
