<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:padding="10dp"
    android:orientation="horizontal"
    android:background="@color/colorWhite"
    android:elevation="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="start|center_vertical"
        android:gravity="start">

        <ImageView
            android:id="@+id/expand_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/expand"
            android:src="@drawable/ic_add_circle_lt_green"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/meetings"
            android:textColor="@color/colorBlack"
            android:layout_gravity="start|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/_0"
            android:textColor="@color/colorDarkGray"
            android:layout_gravity="end|center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/entries"
            android:textColor="@color/colorDarkGray"
            android:layout_gravity="end|center_vertical"/>

        <LinearLayout
            android:id="@+id/view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textColor="@color/colorBlack"
                android:layout_gravity="end|center_vertical"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/expand"
                android:src="@drawable/ic_chevron_right_black"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>