<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:padding="10dp"
    android:orientation="horizontal"
    android:background="@color/colorWhite"
    android:elevation="3dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/results"
        android:textColor="@color/colorBlack"
        android:layout_gravity="start|center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_results_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/_0"
            android:textColor="@color/colorDarkGray"
            android:layout_gravity="end|center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/entries"
            android:textColor="@color/colorDarkGray"
            android:layout_gravity="end|center_vertical"/>


    </LinearLayout>
</LinearLayout>