<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:padding="2dp"
    android:orientation="horizontal"
    android:background="@color/colorWhite"
    android:elevation="3dp"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/meetings"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="start|center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="20dp"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_entries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/_0"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGray"
            android:layout_gravity="end|center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/entries"
            android:textSize="12sp"
            android:textColor="@color/colorDarkGray"
            android:layout_gravity="end|center_vertical"/>
    </LinearLayout>


</LinearLayout>