<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:minHeight="60dp"
    android:clickable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/colorWhite"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="start|center_vertical">

            <ImageView
                android:id="@+id/im_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/item"
                android:src="@drawable/profile_pic_1529318414"/>

            <ImageView
                android:id="@+id/fab_item_type"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="8dp"
                android:elevation="3dp"
                android:clickable="false"
                android:contentDescription="@string/organization"
                android:layout_gravity="end|bottom"
                android:background="@drawable/circular_blue_bg"
                android:src="@drawable/ic_organization_white"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Strathmore University"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/member_since"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_member_since"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/three_years_ago"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="150dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/colorDarkerGray"
                android:maxLines="2"
                android:textSize="13sp" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:elevation="3dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorWhite"
            android:text="@string/view"
            android:drawableEnd="@drawable/ic_chevron_right_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBgDarkGray"/>

</android.support.v7.widget.CardView>
