<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="ContactInvitesBinding">
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.flycode.timespace.ui.appInvites.contactInvites.ContactInvitesViewModel"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBgDarkGray"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.appInvites.contactInvites.ContactInvitesFragment"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginTop="0dp"
                android:background="@color/colorWhite"
                android:hint="@string/search"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_gravity="top"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorDarkGray"
                android:inputType="text"/>
            <ImageButton
                android:id="@+id/btn_close_search"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/navigation_close"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:src="@{viewModel.uiState.isSearchActive? @drawable/ic_close_black_24dp : @drawable/ic_search_black_24dp}"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/main_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:visibility="@{viewModel.uiState.contactPermission? View.VISIBLE : View.GONE}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorTransparentWhite"
                android:gravity="center"
                android:visibility="@{viewModel.uiState.contactPermission? View.GONE : View.VISIBLE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:padding="20dp"
                    android:text="@string/contacts_permission_prompt"
                    android:textStyle="bold"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="20sp"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/button_ask_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_contact_permission"
                    android:background="@drawable/primary_button"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</layout>
